/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.2.2/userguide/tutorial_java_projects.html
 */


plugins {
    id 'application'
}

application {
    mainClassName = 'sftp.Server'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

sourceCompatibility = 13
targetCompatibility = 13

dependencies {
    // This dependency is used by the application.
    //implementation 'com.google.guava:guava:28.1-jre'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'org.apache.sshd:sshd-core:1.0.0'  

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

/*tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

test {
	jvmArgs(['--enable-preview'])
}*/


